--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,11 @@
       <input type="email" name="email" />
       <textarea name="content"></textarea>
     </form>
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="content"></textarea>
+    </form>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
