--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,16 @@
       <input type="email" name="email" />
       <textarea name="content"></textarea>
     </form>
+    <form name="estimate" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="tel" name="tel" />
+      <input type="text" name="street" />
+      <input type="text" name="streetTwo" />
+      <input type="text" name="city" />
+      <input type="number" name="zip" />
+      <input type="checkbox" name="serviceslist" />
+    </form>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
