--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width,user-scalable=0,initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1.0, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="We are a licensed full service landscaping company with over 30 years of worker experience."
+      content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Clean Lines Lawn Care</title>
+    <title>React App</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
