--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Clean Lines Lawn Care</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,12 +21,12 @@
     <form name="review" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
-      <textarea name="content"></textarea>
+      <textarea name="content" />
     </form>
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
-      <textarea name="content"></textarea>
+      <textarea name="content" />
     </form>
     <form name="estimate" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
@@ -37,6 +37,7 @@
       <input type="text" name="city" />
       <input type="number" name="zip" />
       <input type="checkbox" name="serviceslist" />
+      <textarea name='additional' />
     </form>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
