--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,12 @@
     <form name="review" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
-      <textarea name="content" />
+      <textarea name="content"></textarea>
     </form>
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
-      <textarea name="content" />
+      <textarea name="content"></textarea>
     </form>
     <form name="estimate" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
@@ -37,7 +37,7 @@
       <input type="text" name="city" />
       <input type="number" name="zip" />
       <input type="checkbox" name="serviceslist" />
-      <textarea name='additional' />
+      <textarea name='additional'></textarea>
     </form>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
